// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentsList /> should not render "See all comments" button when there are two comments and are both top comments 1`] = `
<div
  class="crayons-story__comments"
>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
</div>
`;

exports[`<CommentsList /> should not render "See all comments" button when there is a single comment and it is the top comment 1`] = `
<div
  class="crayons-story__comments"
>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
</div>
`;

exports[`<CommentsList /> should not render with empty comments array 1`] = `""`;

exports[`<CommentsList /> should not render without comments 1`] = `""`;

exports[`<CommentsList /> should render "See all comments" button when there are two top comments and more than two total 1`] = `
<div
  class="crayons-story__comments"
>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
  <div
    class="crayons-story__comments__actions"
  >
    <a
      class="crayons-btn crayons-btn--secondary crayons-btn--s"
      href="#comments-container"
    >
      See all 3 comments
    </a>
  </div>
</div>
`;

exports[`<CommentsList /> should render comments 1`] = `
<div
  class="crayons-story__comments"
>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/cedrick_effertz"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/5/6210af11-9bdc-4903-8023-bf199a733427.png"
          />
        </span>
        Cedrick Effertz
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/cedrick_effertz/comment/5"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Waistcoat goth vice salvia.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
  <div
    class="crayons-comment pl-2 cursor-pointer"
    onClick={[Function]}
    role="presentation"
  >
    <div
      class="crayons-comment__meta"
    >
      <a
        class="crayons-story__secondary fw-medium"
        href="/miss_shavon_langosh"
      >
        <span
          class="crayons-avatar mr-2"
        >
          <img
            alt="{comment.username} avatar"
            class="crayons-avatar__image"
            src="/uploads/user/profile_image/7/8a6cd3cf-2b23-4500-b265-00f0b524e4de.png"
          />
        </span>
        Miss Shavon Langosh
      </a>
      <a
        class="crayons-story__tertiary ml-1"
        href="/miss_shavon_langosh/comment/k"
      >
        <time>
          4 days ago
        </time>
      </a>
    </div>
    <div
      class="crayons-comment__body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Twee chartreuse kitsch. Before they sold out 8-bit semiotics vhs pitchfork 3 wolf moon. Park migas retro lumbersexual goth whatever slow-carb selvage.</p>

",
        }
      }
    />
    <div
      class="crayons-comment__footer"
    />
  </div>
  <div
    class="crayons-story__comments__actions"
  >
    <a
      class="crayons-btn crayons-btn--secondary crayons-btn--s"
      href="#comments-container"
    >
      See all 3 comments
    </a>
  </div>
</div>
`;
